ON error password field background color not showing fixed

--- a/styles/components/_input.scss
+++ b/styles/components/_input.scss
@@ -38,3 +38,7 @@
         width: 100%;
     }
 }
+
+.passwordM.p-invalid .p-password-input {
+    background-color: #FFD0CE; /* Example background color for error state */
+  }
